fix: update tutorial article

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -72,8 +72,8 @@ Let's get started with scaffolding folder and files for plugins.
 
 ### Scaffold Folder and Files for Plugins
 
-1. Create a folder named `pb-element-iframe` inside `apps/extensions`.
-2. Create a `package.json` file inside `apps/extensions/pb-element-iframe` with the following contents:
+- Create a folder named `pb-element-iframe` inside `apps/extensions`.
+- Create a `package.json` file inside `apps/extensions/pb-element-iframe` with the following contents:
 
 ```json
 {
@@ -93,17 +93,7 @@ Let's get started with scaffolding folder and files for plugins.
 }
 ```
 
-:::tip
-You can add dependencies to your workspace package using the `yarn workspace <YOUR_WORKSPACE_NAME> add <DEPENDENCY_NAME>` command.
-
-For example, running the following command, will add the `@webiny/form` as dependency in the `@extensions/pb-element-iframe` workspace package:
-
-```shell
-yarn workspace @extensions/pb-element-iframe add @webiny/form
-```
-:::
-
-4. Create a `tsconfig.json` file with the following contents:
+- Create a `tsconfig.json` file with the following contents:
 ```json
 {
   "extends": "../../../tsconfig",
@@ -113,16 +103,13 @@ yarn workspace @extensions/pb-element-iframe add @webiny/form
   }
 }
 ```
+- Add `"apps/extensions/pb-element-iframe"` to workspaces packages inside `package.json` in project root.
 
-5. Create `admin` and `render` folders inside `apps/extensions/pb-element-iframe`.
+- Create `admin` and `render` folders inside `apps/extensions/pb-element-iframe`.
 
-6. Link workspaces by running `yarn install` command from project root.
+- Link workspaces by running `yarn install` command from project root. After completion there will be a [symbolic link](https://en.wikipedia.org/wiki/Symbolic_link) of `@extensions/pb-element-iframe` package in `node_modules`.
 
-:::info
-Look in `node_modules` there should be a [symbolic link](https://en.wikipedia.org/wiki/Symbolic_link) of `@extensions/pb-element-iframe`.
-:::
-
-7. Add `@extensions/pb-element-iframe` package as a dependency to both the Admin Area application and Website application,
+- Add `@extensions/pb-element-iframe` package as a dependency to both the Admin Area application and Website application,
 by editing the `apps/admin/code/package.json` and `apps/website/code/package.json` files respectively:
 
 ```shell
@@ -553,10 +540,19 @@ After registering the plugins successfully the page element will be available in
 
 ## Conclusion
 
-Congratulations!! 🎉🥳
-
-We've successfully created a custom page element for our Page Builder app.
+Congratulations! We've successfully created a new page element for our Page Builder app.
 Use similar approach to easily create a whole array of custom elements for Page Builder app.
 
-You can also checkout the full code example in our [repo](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element).
+You will find the full code example in our webiny examples [repo](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element).
 If you have further questions, feel free to [ask](https://www.webiny.com/slack) for additional help.
+
+## FAQ
+
+### How to Add Dependencies in Workspace Package?
+You can add dependencies to your workspace package using the `yarn workspace <YOUR_WORKSPACE_NAME> add <DEPENDENCY_NAME>` command.
+
+For example, running the following command, will add the `@webiny/form` as dependency in the `@extensions/pb-element-iframe` workspace package:
+
+```shell
+yarn workspace @extensions/pb-element-iframe add @webiny/form
+```
