docs: updated reqs for the installation of this scaffold - private repos only supported under GH Ent accounts

--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -14,6 +14,12 @@ import ghActions from "./ci-cd/gh_actions_logo.png";
 
 This feature is available since **v5.7.0**.
 
+You're using a **public repo** or a **private repo under a GitHub Enterprise** account.  
+The current GitHub CI/CD set up relies on [GitHub Environments](https://docs.github.com/en/actions/reference/environments). Environments are only available in public repositories - for all GitHub products - or private repositories in GitHub Enterprise.
+If you're running a private repository in a non-GitHub Enterprise account, you will get the following installation error, and **won't be able to use this scaffold today**.
+```console
+✘ Creation of pr, dev, staging, and prod code repository environments failed with the following message: Not Found
+```
 :::
 
 :::tip What you'll learn
