docs: Add line to show the removal of padding

--- a/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
@@ -153,6 +153,7 @@ And, we need to make the following changes to it:
   // For the "width" settings in editor sidebar to work
   // The element needs to have "width: 100%"
   width: 100%;
+  // padding: 14px 20px !important; <--- comment out or remove this
   //
   // More style definition.
   //
