docs: moved CI/CD messaging for private repos under the GH section, rather than at the top of the doc

--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -14,12 +14,6 @@ import ghActions from "./ci-cd/gh_actions_logo.png";
 
 This feature is available since **v5.7.0**.
 
-You're using a **public repo** or a **private repo under a GitHub Enterprise** account.  
-The current GitHub CI/CD set up relies on [GitHub Environments](https://docs.github.com/en/actions/reference/environments). Environments are only available in public repositories - for all GitHub products - or private repositories in GitHub Enterprise.
-If you're running a private repository in a non-GitHub Enterprise account, you will get the following installation error, and **won't be able to use this scaffold today**.
-```console
-✘ Creation of pr, dev, staging, and prod code repository environments failed with the following message: Not Found
-```
 :::
 
 :::tip What you'll learn
@@ -55,6 +49,16 @@ If you plan to use a different CI/CD provider, you can still create your workflo
 </a>
 
 [GitHub Actions](https://github.com/features/actions) are often a good choice when it comes to setting up your own CI/CD, simply because of its tight integration with other existing GitHub concepts and resources.
+
+:::info Can I use this?
+
+You must be running a **public repo** or a **private repo under a GitHub Enterprise** account.  
+The current GitHub CI/CD set up relies on [GitHub Environments](https://docs.github.com/en/actions/reference/environments). Environments are only available in public repositories - for all GitHub products - or private repositories in GitHub Enterprise.
+If you're running a private repository in a non-GitHub Enterprise account, you will get the following installation error, and **won't be able to use this scaffold today**.
+```console
+✘ Creation of pr, dev, staging, and prod code repository environments failed with the following message: Not Found
+```
+:::
 
 :::caution
 Upon running this scaffold, note that you will need to paste your GitHub account's personal access token. You can choose to use an existing one, or even better, create a new one simply by clicking on the [following link](https://github.com/settings/tokens/new?scopes=repo,workflow&description=webiny-cicd-token).
