fix: update tutorial as per feedback

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -13,13 +13,13 @@ description: Create a new Page Builder element.
 
 ## Overview
 
-Although the Page Builder app comes with a lot of ready-made page elements, at one point in time, you might need to create your own to satisfy your specific requirements.
+Although the Page Builder application comes with a plethora of ready-made page elements, at one point in time, you might need to create your own to satisfy your specific requirements.
 To achieve that, we can utilize a couple of simple plugins, which is what we'll cover in this short tutorial.
 
 ## What We'll Build
 
-We’ll create a new element that will allow content creators to embed content using an `iframe`.
-Here's what the result will look like:
+We’ll create a new page element that allows content creators to embed content using an `iframe`.
+Here's what the final result will look like:
 
 <!-- vale off -->
 
@@ -35,47 +35,43 @@ Here's what the result will look like:
 The full code example used in this tutorial is available in our webiny-examples [repository](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element).
 :::
 
-## Prerequisites
-
-This tutorial assumes you have already created a new Webiny project to work on.
-We recommend reading our [install Webiny](/docs/tutorials/install-webiny) tutorial which will show you how to do it.
-
 ## Organization of Files
 
-Although you can place and organize the plugin files as you see fit for your project, we recommend following some kind of structure that is easy to understand and maintain later on.
+Although you can place and organize the plugin files as you see fit for your project, we recommend the following structure is adapted.
 
-Because all page elements need to share code (a plugin) between the Admin Area application `(apps/admin)` and the Website application `(apps/website)`, it becomes necessary to put that code in some shared folder.
+Because all page elements need to share code (plugins) between the **Admin Area** `(apps/admin)` and the **Website** `(apps/website)` applications,
+it becomes necessary to put that code in a shared folder.
 
 :::info
 This is a very common scenario for Page Builder plugins because the Admin Area application uses the plugin to render the element in page preview
-and, the Website application uses the same plugin to render the element on the actual page.
+and the Website application uses the same plugin to render the element on the actual page.
 :::
 
-In this tutorial, we will create a folder named `pb-element-iframe` in `apps/extensions` which, will contain all the code for plugins.
+We will create a folder named [`pb-element-iframe`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe) in [`apps/extensions`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions) which will contain all of the code for plugins.
 :::note
-Please feel free to create a folder named `extensions` inside `apps` if it doesn't exist already.
+By default, the `extensions` folder does not exist, so you'll need to create it.
 :::
 
 ### Anatomy of Element Plugins
 
 To create a new page element, we need to register two sets of plugins:
 1. For the **Admin Area** application:
-- a plugin that will define how it's rendered in the editor
-- a plugin that will define all the available settings and options for it
+- a plugin that defines how it's rendered in the editor
+- a plugin that defines all the available settings and options for it
 2. For the **Website** application:
-- a plugin that will define how the page element is rendered on the actual page
+- a plugin that defines how the page element is rendered on the actual page
 
-To better organize files we'll write all the plugins needed for the Admin Area application and Website application in
-`apps/extensions/pb-element-iframe/admin` and `apps/extensions/pb-element-iframe/render` respectively.
+To better organize files we'll write all the plugins needed for the **Admin Area** application and **Website** application in
+[`apps/extensions/pb-element-iframe/admin`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin) and [`apps/extensions/pb-element-iframe/render`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/render) respectively.
 
 Let's get started with scaffolding folder and files for plugins.
 
 ### Scaffold Folder and Files for Plugins
 
-- Create a folder named `pb-element-iframe` inside `apps/extensions`.
-- Create a `package.json` file inside `apps/extensions/pb-element-iframe` with the following contents:
+- Create a folder named [`pb-element-iframe`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe) inside [`apps/extensions`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/).
+- Create a [`package.json`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/package.json) file inside `apps/extensions/pb-element-iframe` with the following contents:
 
-```json
+```json title="apps/extensions/pb-element-iframe/package.json"
 {
   "name": "@extensions/pb-element-iframe",
   "version": "1.0.0",
@@ -93,8 +89,8 @@ Let's get started with scaffolding folder and files for plugins.
 }
 ```
 
-- Create a `tsconfig.json` file with the following contents:
-```json
+- Create a [`tsconfig.json`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/tsconfig.json) file with the following contents:
+```json title="apps/extensions/pb-element-iframe/tsconfig.json"
 {
   "extends": "../../../tsconfig",
   "include": ["."],
@@ -158,7 +154,7 @@ We will add the necessary plugins for Admin Area application in the [`apps/exten
 
 ### Editor Element Plugin
 
-We will start with the [`pb-editor-page-element`](/docs/references/page-builder/plugins#pb-editor-page-element) plugin type:
+We will start with the [`PbEditorPageElementPlugin`](/docs/references/page-builder/plugins#pb-editor-page-element) plugin:
 
 ```tsx title="apps/extensions/pb-element-iframe/admin/index.tsx"
 // ...
@@ -262,7 +258,7 @@ After [registering the plugin](#register-plugins-in-the-admin-area-application) 
 
 <!-- vale on -->
 
-Now that we've covered the overall structure of plugin. Let's see what's inside [`IframeEditor`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx) component:
+Now that we've covered the overall structure of plugin, let's see what's inside [`IFrameEditor`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx) component:
 
 ```tsx title="apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx"
 // ...
@@ -295,11 +291,11 @@ const IframeEditor = props => {
 export default IframeEditor;
 ```
 
-As you can see it's a simple React component which render an `iframe` HTML element.
+As you can see, it's a simple React component which render an `iframe` HTML element.
 
 :::note
 Every element needs to have [`ElementRoot`](https://github.com/webiny/webiny-js/blob/v5/packages/app-page-builder/src/render/components/ElementRoot.tsx#L31)
-component as root because it applies `styles, classes and attributes` to the element assigned via right sidebar style tab.
+component as root because it applies **styles**, **classes** and **attributes** to the element assigned via right sidebar style tab.
 :::
 
 :::info
@@ -308,13 +304,13 @@ Every element needs to have it as it contains all base styles applied by Page Bu
 :::
 
 :::tip
-Notice we've added `webiny-pb-page-element-iframe` CSS class, which enables us to add custom CSS styling if needed.
+Notice we've added [`webiny-pb-page-element-iframe`](https://github.com/webiny/webiny-examples/blob/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx#L35) CSS class, which enables us to add custom CSS styling if needed.
 :::
 
 ### Element Settings Plugin
 
-The next plugin we'll need to define is the [`pb-editor-page-element-advanced-settings`](/docs/references/page-builder/plugins#pb-editor-page-element-advanced-settings),
-which we will use to render the required UI for settings, so the user can provide an iframe URL.
+The next plugin we'll need to define is the [`PbEditorPageElementAdvancedSettingsPlugin `](/docs/references/page-builder/plugins#pb-editor-page-element-advanced-settings),
+which we will use to render the required UI for settings, so the user can provide an `iframe` URL.
 The settings UI will be shown automatically in the right sidebar when the user drag-and-drop the page element on the page.
 
 We will add this plugin in the [`apps/extensions/pb-element-iframe/admin/iframeSettings.tsx`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/iframeSettings.tsx) file:
@@ -367,7 +363,7 @@ As mentioned, this code will show the settings UI in sidebar and ask for the URL
 
 As mentioned, every page element consists of two sets of plugins. We've already covered the editor side of the logic, now, let's write the plugin that will render it to the page preview and the actual page.
 
-In order to render the element on the actual page, we will use the [`pb-render-page-element`](/docs/references/page-builder/plugins#pb-render-page-element) plugin.
+In order to render the element on the actual page, we will use the [`PbEditorPageElementPlugin`](/docs/references/page-builder/plugins#pb-render-page-element) plugin.
 
 We will add this plugin in the [`apps/extensions/pb-element-iframe/render/index.tsx`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/render/index.tsx) file.
 
@@ -435,10 +431,10 @@ Along with the actual page, this plugin will also responsible for rendering the 
 
 ### Register Plugins in the Admin Area Application
 
-Now that we've created plugins for `iframe` element. We need to register them in the Admin Area application to work.
+Now that we've created plugins for the `iframe` element, we need to register them in the Admin Area application to work.
 Let's make the following changes in [`apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts) file:
 
-```ts title="apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts"
+```ts title="apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts" {5,8-9}
 // Some code is removed for the sake of brevity.
 (...)
 
@@ -455,7 +451,7 @@ export default [
 
 Also in [`apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts) file:
 
-```ts title="apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts"
+```ts title="apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts" {5,9}
 // Some code is removed for the sake of brevity.
 (...)
 
@@ -470,7 +466,7 @@ export default [
 ];
 ```
 
-After registering the plugins successfully you will see the `iframe` element in the Admin Area application as shown below:
+After registering the plugins successfully, we should be able to see the `iframe` element in the Admin Area application, as shown below:
 
 <!-- vale off -->
 
@@ -486,7 +482,7 @@ After registering the plugins successfully you will see the `iframe` element in 
 
 ### Render Element Plugin
 
-In order to render the page element on the Website application, we will use the [`pb-render-page-element`](/docs/references/page-builder/plugins#pb-render-page-element) plugin again.
+In order to render the page element in the Website application, we will use the [`PbRenderElementPlugin`](/docs/references/page-builder/plugins#pb-render-page-element) plugin again.
 
 ```tsx title="apps/extensions/pb-element-iframe/render/components/iFrame.tsx"
 import { PbRenderElementPlugin } from "@webiny/app-page-builder/types";
@@ -506,27 +502,24 @@ export default () =>
 
 ### Register Plugins in the Website Application
 
-We need to register it inside `apps/website` so that, `iframe` element can be rendered in the Website application.
+Make the following changes in the [`apps/website/code/src/plugins/pageBuilder.ts`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/website/code/src/plugins/pageBuilder.ts) file:
 
-Make the following changes in [`apps/website/code/src/plugins/pageBuilder.ts`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/website/code/src/plugins/pageBuilder.ts) file:
-```ts title="apps/website/code/src/plugins/pageBuilder.ts"
+```ts title="apps/website/code/src/plugins/pageBuilder.ts" {5,10}
 // Some code is removed for the sake of brevity.
 (...)
-
 
 // Import `iframe` element
 import iframeElement from "@extensions/pb-element-iframe/render";
 
 export default [
     (...)
-
     // Page elements
     iframeElement(),
     (...)
 ];
 ```
 
-After registering the plugins successfully the page element will be available in your Website application:
+After registering the plugins successfully, the page element should be visible in your Website application:
 
 <!-- vale off -->
 
@@ -540,10 +533,10 @@ After registering the plugins successfully the page element will be available in
 
 ## Conclusion
 
-Congratulations! We've successfully created a new page element for our Page Builder app.
-Use similar approach to easily create a whole array of custom elements for Page Builder app.
+We've successfully created a new page element for the Page Builder application.
+You can use the same approach to easily create a whole array of custom elements for Page Builder app.
 
-You will find the full code example in our webiny examples [repo](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element).
+You can find the full code example in our [webiny examples](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element) Github repository.
 If you have further questions, feel free to [ask](https://www.webiny.com/slack) for additional help.
 
 ## FAQ
