--- a/docs/how-to-guides/webiny-cli/scaffolding/introduction.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/introduction.mdx
@@ -34,8 +34,11 @@ Out of the box, Webiny offers a couple of scaffolding tools, or in short, scaffo
 
 The following is a list of currently available scaffolds:
 
-- [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area)
+- [New Full Stack Application](/docs/how-to-guides/webiny-cli/scaffolding/new-full-stack-application)
+- [New GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api)
 - [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api)
+- [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area)
+- [New React Application](/docs/how-to-guides/webiny-cli/scaffolding/new-react-application)
 - [Set up CI/CD](/docs/how-to-guides/webiny-cli/scaffolding/ci-cd)
 - React Component Package
 
