fix: update tutorial as per feedback

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -32,7 +32,7 @@ Here's what the final result will look like:
 <!-- vale on -->
 
 :::info
-The full code example used in this tutorial is available in our webiny-examples [repository](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element).
+The full code example used in this tutorial is available in our [webiny-examples](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element) Github repository.
 :::
 
 ## Organization of Files
