fix: update tutorial as per feedback

--- a/docs/how-to-guides/development/environment-variables.mdx
+++ b/docs/how-to-guides/development/environment-variables.mdx
@@ -307,11 +307,11 @@ Behind the scenes, [Webiny CLI](/docs/key-topics/webiny-cli) uses the [`dotenv`]
 
 The following commands load the `.env` file: [`deploy`](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command), [`destroy`](/docs/how-to-guides/deployment/destroy-cloud-infrastructure#the-destroy-command), [`watch`](/docs/how-to-guides/webiny-cli/use-watch-command), and [`pulumi`](/docs/how-to-guides/deployment/execute-pulumi-commands).
 
-#### Can I use the DEBUG variable while developing custom applications?
+#### Can I use the `DEBUG` variable while developing custom applications?
 
 Yes, you can too use the `DEBUG` environment variable to determine what information you want to reveal in case of application runtime errors.
 
 #### Is the `REACT_APP_` prefix necessary when naming frontend environment variables?
 
 Yes, for frontend applications, the names of environment variables must always be prefixed with the `REACT_APP_` prefix.
-This is mainly because of the [Create React App](https://create-react-app.dev/docs/adding-custom-environment-variables/), which is being utilized as a frontend application development tool.
+This is mainly because of the [Create React App](https://create-react-app.dev/docs/adding-custom-environment-variables/), which is being utilized as the base tool for frontend application development.
